# nexus-agent

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  deploy.bat  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  settings.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  pages.yml  release.yml  stale.yml  welcome.yml
.nexus/: registry.json
.nexus/skills/: code_reviewer.py  csv_analyzer.py  parse_logs.py
docs/: advanced_tutorial.md  api-reference.md  configuration.md  index.html  plugin-guide.md  roadmap.md  robots.txt  sitemap.xml
examples/plugins/: task_logger.py
src/: __init__.py  agent.py  ast_memory.py  audit.py  benchmarks.py  cli.py  cloud_sync.py  config.py  context_manager.py  export.py  ide.py  marketplace.py  memory.py  mobile.py  multi_agent.py  plugins.py  sandbox.py  skills.py  updater.py  voice.py  web.py
tests/: test_agent.py
