[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-agent"
version = "1.0.0"
description = "The Zero-Config, Self-Evolving Local AI Agent Framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Rudra Sarker", email = "rudrasarker130@gmail.com"}
]
keywords = ["ai-agent", "local-ai", "ollama", "graphrag", "self-evolving", "privacy-first", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "litellm>=1.83.9",
    "requests>=2.33.1",
    "networkx>=3.0",
    "pydantic>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
web = ["fastapi>=0.104.0", "uvicorn>=0.24.0"]
yaml = ["pyyaml>=6.0"]
cloud = ["cryptography>=41.0.0"]
s3 = ["boto3>=1.28.0"]
jwt = ["PyJWT>=2.8.0"]
all = ["fastapi>=0.104.0", "uvicorn>=0.24.0", "pyyaml>=6.0", "cryptography>=41.0.0", "boto3>=1.28.0", "PyJWT>=2.8.0"]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy"]

[project.scripts]
nexus = "src.cli:app"

[project.urls]
Homepage = "https://rudra496.github.io/nexus-agent"
Repository = "https://github.com/rudra496/nexus-agent"
Documentation = "https://rudra496.github.io/nexus-agent"
Issues = "https://github.com/rudra496/nexus-agent/issues"
Changelog = "https://github.com/rudra496/nexus-agent/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".nexus", ".git", "__pycache__"]

[tool.mypy]
ignore_missing_imports = true
exclude = [".nexus", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
